--- a/docs/less/blocks/_filter.less
+++ b/docs/less/blocks/_filter.less
@@ -39,16 +39,17 @@
 }
 .filter-block__button {
 	display: inline-block;
-	padding: 12px 31px 15px;
+	padding: 10px 29px 13px;
 	cursor: pointer;
 	color: #cecece;
 
 	&:hover {
-		color: #000;
+	  color: #000;
+	  border: 2px solid @brownHeading;
+	  transition: 0.2s ease-in;
 	}
 }
 .filter-block__button--active {
-	padding: 10px 29px 13px;
 	color: #000;
 	border: 2px solid @brownHeading;
 }
